# prisbevakaren

./: .coveragerc  .gitignore  AGENTS.md  Makefile  README.md  main.py  mypy.ini  pyproject.toml  update_prices.py
.github/workflows/: ci.yaml
src/: app.py  config.py  price_scraper.py  slack_notifier.py
src/templates/: design1.html  design2.html  design3.html  index.html
tests/: conftest.py  test_app.py  test_e2e.py  test_slack_notifier.py  test_update_prices.py
