[project]
name = "prisbevakaren"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.0",
    "typed-json-db==0.3.1",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.48.0",
    "slack-sdk>=3.33.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.9",
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
]
